# branch_comparer

./: README.md  pyproject.toml
src/comparer/: cli.py  comparer.py
