[project]
name = 'branch-comparer'
requires-python = ">=3.9"
version = "0.3"
authors = [
    {name = "AndreyKuzmaDev", email = "andreykuzma2004@gmail.com"},
]
dependencies = [
    "typer",
    "requests",
    "packaging"
]

[project.scripts]
compare-branches = "comparer.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
